plugins {
    base
    `java-library`
    id("com.github.johnrengelman.shadow") version "8.1.0" apply false
}

allprojects {
    apply(plugin = "java")
    group = "io.papermc.debuggery"
    version = "1.5.0-SNAPSHOT"

    java {
        toolchain.languageVersion.set(JavaLanguageVersion.of(17))
    }
}

subprojects {
    tasks {
        withType<JavaCompile> {
            options.encoding = Charsets.UTF_8.name()
            options.release.set(17)
        }
        withType<Javadoc> {
            options.encoding = Charsets.UTF_8.name()
        }
        processResources {
            filteringCharset = Charsets.UTF_8.name()
        }
    }

    dependencies {
        compileOnly("org.jetbrains:annotations:24.0.1")
        testImplementation("org.jetbrains:annotations:24.0.1")
        testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.2")
        testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.2")
    }
}
